apps/example-app-nodejs/.kustomize/docker/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: example-app-nodejs-docker
  namespace: demo-application-deployment
  labels:
    app: example-app-nodejs-docker
    app.kubernetes.io/component: example-app-nodejs-docker
    app.kubernetes.io/instance: example-app-nodejs-docker
    app.kubernetes.io/name: example-app-nodejs-docker
    app.kubernetes.io/part-of: example-app-nodejs
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-namespace: demo-application-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-app-nodejs-docker
  template:
    metadata:
      labels:
        app: example-app-nodejs-docker
        deploymentconfig: example-app-nodejs-docker
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: example-app-nodejs-docker
          image: >-
            cestay/example-app-nodejs:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
