apps/example-app-nodejs/.kustomize/docker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-nodejs-docker
  namespace: user1-petclinic
spec:
  selector:
    app: example-app-nodejs-docker
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
